--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя страница с JavaScript</title>
+    <title>Мое мини-приложение в Telegram</title>
+    <script>
+        // Когда Telegram загрузит приложение, отправим сигнал готовности
+        window.Telegram.WebApp.ready();
+
+        // Получение информации о пользователе (например, имя)
+        const user = window.Telegram.WebApp.initDataUnsafe.user;
+        document.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('userGreeting').textContent = `Привет, ${user.first_name}!`;
+        });
+    </script>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <button id="myButton">Нажми меня</button>
+    <h1 id="userGreeting">Привет, пользователь!</h1>
+    <button id="closeApp">Закрыть приложение</button>
 
-    <!-- Подключение файла JavaScript -->
-    <script src="script.js"></script>
+    <script>
+        // Закрытие приложения при нажатии на кнопку
+        document.getElementById('closeApp').addEventListener('click', () => {
+            Telegram.WebApp.close();
+        });
+    </script>
 </body>
 </html>
