--- a/index.html
+++ b/index.html
@@ -3,62 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Меню на день</title>
+    <title>Главная</title>
     <style>
+        /* Основные стили для тела и размещение */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            justify-content: space-between;
             height: 100vh;
-            background-color: #f0f0f0;
-        }
-        
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
+            background-color: #f5f5f5;
         }
 
-        .menu {
+        /* Основной контент */
+        .content {
             display: flex;
-            flex-direction: column;
-            gap: 15px;
-            width: 80%;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1;
+            font-size: 24px;
+            color: #333;
         }
 
-        .menu button {
-            padding: 15px;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
+        /* Панель навигации */
+        .nav-bar {
+            display: flex;
+            justify-content: space-around;
             background-color: #0088cc;
+            padding: 10px 0;
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Кнопки навигации */
+        .nav-bar a {
             color: white;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+            font-size: 16px;
+            text-align: center;
+            text-decoration: none;
+            flex: 1;
         }
 
-        .menu button:hover {
+        .nav-bar a.active {
+            font-weight: bold;
+            color: #ffdd57;
+        }
+
+        /* Кнопка */
+        .nav-bar a:hover {
             background-color: #005f99;
-        }
-
-        .menu button:active {
-            background-color: #004080;
         }
     </style>
 </head>
 <body>
 
-    <h1>Выберите прием пищи</h1>
+    <!-- Основной контент -->
+    <div class="content">
+        Главная страница
+    </div>
 
-    <div class="menu">
-        <button onclick="alert('Завтрак выбран')">Завтрак</button>
-        <button onclick="alert('Обед выбран')">Обед</button>
-        <button onclick="alert('Ужин выбран')">Ужин</button>
+    <!-- Панель навигации -->
+    <div class="nav-bar">
+        <a href="index.html" class="active">Главная</a>
+        <a href="maps.html">Maps</a>
+        <a href="search.html">Поиск</a>
+        <a href="profile.html">Profile</a>
     </div>
 
 </body>
 </html>
-
