--- a/index.html
+++ b/index.html
@@ -31,26 +31,35 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: #0088cc;
-            padding: 10px 0;
+            background-color: #fff;
+            padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
 
         /* Кнопки навигации */
         .nav-bar a {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background-color: #0088cc;
             color: white;
-            font-size: 16px;
+            font-size: 12px;
             text-align: center;
             text-decoration: none;
-            flex: 1;
+            transition: background-color 0.3s ease;
         }
 
+        /* Активная кнопка */
         .nav-bar a.active {
+            background-color: #ffdd57;
+            color: #333;
             font-weight: bold;
-            color: #ffdd57;
         }
 
-        /* Кнопка */
+        /* Hover-эффект */
         .nav-bar a:hover {
             background-color: #005f99;
         }
