--- a/maps.html
+++ b/maps.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maps</title>
     <style>
-        /* Общий стиль как у главной страницы */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -16,6 +15,7 @@
             height: 100vh;
             background-color: #f5f5f5;
         }
+
         .content {
             display: flex;
             align-items: center;
@@ -24,24 +24,36 @@
             font-size: 24px;
             color: #333;
         }
+
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: #0088cc;
-            padding: 10px 0;
+            background-color: #fff;
+            padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
+
         .nav-bar a {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background-color: #0088cc;
             color: white;
-            font-size: 16px;
+            font-size: 12px;
             text-align: center;
             text-decoration: none;
-            flex: 1;
+            transition: background-color 0.3s ease;
         }
+
         .nav-bar a.active {
+            background-color: #ffdd57;
+            color: #333;
             font-weight: bold;
-            color: #ffdd57;
         }
+
         .nav-bar a:hover {
             background-color: #005f99;
         }
@@ -62,3 +74,4 @@
 
 </body>
 </html>
+
