--- a/search.html
+++ b/search.html
@@ -4,7 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Поиск</title>
-    <!-- CSS аналогичен предыдущим страницам -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100vh;
+            background-color: #f5f5f5;
+        }
+
+        .content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1;
+            font-size: 24px;
+            color: #333;
+        }
+
+        .nav-bar {
+            display: flex;
+            justify-content: space-around;
+            background-color: #fff;
+            padding: 15px 0;
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .nav-bar a {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background-color: #0088cc;
+            color: white;
+            font-size: 12px;
+            text-align: center;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-bar a.active {
+            background-color: #ffdd57;
+            color: #333;
+            font-weight: bold;
+        }
+
+        .nav-bar a:hover {
+            background-color: #005f99;
+        }
+    </style>
 </head>
 <body>
 
