--- a/search.html
+++ b/search.html
@@ -18,13 +18,53 @@
 
         .content {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             flex-grow: 1;
-            font-size: 24px;
+            padding-top: 30px;
             color: #333;
         }
 
+        /* Стили для поисковой строки */
+        .search-container {
+            display: flex;
+            width: 80%;
+            max-width: 500px;
+            position: relative;
+        }
+
+        .search-input {
+            flex: 1;
+            padding: 10px 15px;
+            font-size: 16px;
+            border: 2px solid #ccc;
+            border-radius: 25px 0 0 25px;
+            outline: none;
+        }
+
+        .search-button {
+            background-color: #0088cc;
+            border: none;
+            padding: 0 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 0 25px 25px 0;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .search-button:hover {
+            background-color: #005f99;
+        }
+
+        .search-button img {
+            width: 20px;
+            height: 20px;
+        }
+
+        /* Панель навигации */
         .nav-bar {
             display: flex;
             justify-content: space-around;
@@ -33,6 +73,7 @@
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
 
+        /* Круглые кнопки навигации */
         .nav-bar a {
             width: 50px;
             height: 50px;
@@ -62,9 +103,16 @@
 <body>
 
     <div class="content">
-        Страница Поиск
+        <!-- Поисковая строка -->
+        <div class="search-container">
+            <input type="text" class="search-input" placeholder="Введите запрос...">
+            <button class="search-button">
+                <img src="https://img.icons8.com/ios-filled/50/ffffff/search--v1.png" alt="Search Icon">
+            </button>
+        </div>
     </div>
 
+    <!-- Панель навигации -->
     <div class="nav-bar">
         <a href="index.html">Главная</a>
         <a href="maps.html">Maps</a>
@@ -74,4 +122,3 @@
 
 </body>
 </html>
-
