--- a/maps.html
+++ b/maps.html
@@ -16,15 +16,13 @@
             background-color: #f5f5f5;
         }
 
-        .content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-grow: 1;
-            font-size: 24px;
-            color: #333;
+        /* Стили для карты */
+        #map {
+            width: 100%;
+            height: 80%;
         }
 
+        /* Панель навигации */
         .nav-bar {
             display: flex;
             justify-content: space-around;
@@ -33,6 +31,7 @@
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
 
+        /* Круглые кнопки навигации */
         .nav-bar a {
             width: 50px;
             height: 50px;
@@ -61,10 +60,10 @@
 </head>
 <body>
 
-    <div class="content">
-        Страница Maps
-    </div>
+    <!-- Карта -->
+    <div id="map"></div>
 
+    <!-- Панель навигации -->
     <div class="nav-bar">
         <a href="index.html">Главная</a>
         <a href="maps.html" class="active">Maps</a>
@@ -72,6 +71,41 @@
         <a href="profile.html">Profile</a>
     </div>
 
+    <!-- Подключение Яндекс Карт API -->
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=1e4dd542-96ac-4d72-868c-6af678c8e88f&lang=ru_RU"></script>
+    <script>
+        ymaps.ready(init);
+
+        function init() {
+            // Определение карты и центра по текущему местоположению пользователя
+            navigator.geolocation.getCurrentPosition(function(position) {
+                const userLocation = [position.coords.latitude, position.coords.longitude];
+                
+                // Создание карты
+                const map = new ymaps.Map("map", {
+                    center: userLocation,
+                    zoom: 14,
+                    controls: ['zoomControl', 'searchControl']
+                });
+
+                // Добавление маркера на текущем местоположении
+                const userPlacemark = new ymaps.Placemark(userLocation, {
+                    balloonContent: 'Вы здесь'
+                }, {
+                    preset: 'islands#blueCircleDotIcon'
+                });
+                map.geoObjects.add(userPlacemark);
+
+                // Поиск заведений с едой рядом с текущим местоположением
+                const searchControl = map.controls.get('searchControl');
+                searchControl.search('рестораны, кафе, столовые').then(function () {
+                    searchControl.options.set({
+                        noPlacemark: false,
+                        provider: 'yandex#search'
+                    });
+                });
+            });
+        }
+    </script>
 </body>
 </html>
-
