--- a/maps.html
+++ b/maps.html
@@ -3,109 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maps</title>
+    <title>Карта Яндекс</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100vh;
-            background-color: #f5f5f5;
-        }
-
-        /* Стили для карты */
         #map {
             width: 100%;
-            height: 80%;
-        }
-
-        /* Панель навигации */
-        .nav-bar {
-            display: flex;
-            justify-content: space-around;
-            background-color: #fff;
-            padding: 15px 0;
-            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Круглые кнопки навигации */
-        .nav-bar a {
-            width: 50px;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            background-color: #0088cc;
-            color: white;
-            font-size: 12px;
-            text-align: center;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-        }
-
-        .nav-bar a.active {
-            background-color: #ffdd57;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .nav-bar a:hover {
-            background-color: #005f99;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-
-    <!-- Карта -->
     <div id="map"></div>
 
-    <!-- Панель навигации -->
-    <div class="nav-bar">
-        <a href="index.html">Главная</a>
-        <a href="maps.html" class="active">Maps</a>
-        <a href="search.html">Поиск</a>
-        <a href="profile.html">Profile</a>
-    </div>
-
-    <!-- Подключение Яндекс Карт API -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=1e4dd542-96ac-4d72-868c-6af678c8e88f&lang=ru_RU"></script>
     <script>
         ymaps.ready(init);
-
         function init() {
-            // Определение карты и центра по текущему местоположению пользователя
-            navigator.geolocation.getCurrentPosition(function(position) {
-                const userLocation = [position.coords.latitude, position.coords.longitude];
-                
-                // Создание карты
-                const map = new ymaps.Map("map", {
-                    center: userLocation,
-                    zoom: 14,
-                    controls: ['zoomControl', 'searchControl']
-                });
-
-                // Добавление маркера на текущем местоположении
-                const userPlacemark = new ymaps.Placemark(userLocation, {
-                    balloonContent: 'Вы здесь'
-                }, {
-                    preset: 'islands#blueCircleDotIcon'
-                });
-                map.geoObjects.add(userPlacemark);
-
-                // Поиск заведений с едой рядом с текущим местоположением
-                const searchControl = map.controls.get('searchControl');
-                searchControl.search('рестораны, кафе, столовые').then(function () {
-                    searchControl.options.set({
-                        noPlacemark: false,
-                        provider: 'yandex#search'
-                    });
-                });
+            // Создаем карту, центрируем на Москве, если геолокация недоступна
+            const map = new ymaps.Map("map", {
+                center: [55.751244, 37.618423], // Координаты центра карты
+                zoom: 10
             });
         }
     </script>
 </body>
 </html>
+
