--- a/maps.html
+++ b/maps.html
@@ -3,59 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Карта с определением местоположения</title>
+    <title>Карта с геолокацией</title>
     <style>
         #map {
             width: 100%;
             height: 100vh;
         }
+        #geolocation-btn {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #geolocation-btn:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
+
+    <!-- Кнопка для определения местоположения -->
+    <button id="geolocation-btn">Определить местоположение</button>
+
+    <!-- Контейнер для карты -->
     <div id="map"></div>
 
     <!-- Подключение Яндекс Карт API с вашим ключом -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4cd569f0-83ba-4117-8f80-6ed73aaa6260&lang=ru_RU"></script>
+
     <script>
         ymaps.ready(init);
 
+        let map;
+
         function init() {
-            const map = new ymaps.Map("map", {
-                center: [55.751244, 37.618423], // Москва (временный центр)
+            // Создаём карту с центром в Москве (или в любом другом месте по умолчанию)
+            map = new ymaps.Map("map", {
+                center: [55.751244, 37.618423], // Москва (начальный центр)
                 zoom: 12
             });
 
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
-                    function(position) {
-                        const userLocation = [position.coords.latitude, position.coords.longitude];
-                        
-                        // Центрируем карту на текущем местоположении пользователя
-                        map.setCenter(userLocation);
+            // Обработчик нажатия на кнопку геолокации
+            document.getElementById('geolocation-btn').onclick = function() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(
+                        function(position) {
+                            const userLocation = [
+                                position.coords.latitude,
+                                position.coords.longitude
+                            ];
 
-                        // Добавляем маркер с текстом "Вы здесь"
-                        const userPlacemark = new ymaps.Placemark(userLocation, {
-                            balloonContent: 'Вы здесь'
-                        }, {
-                            preset: 'islands#blueCircleDotIcon'
-                        });
-                        map.geoObjects.add(userPlacemark);
-                    },
-                    function(error) {
-                        // Логирование ошибки для диагностики
-                        console.error("Ошибка определения местоположения:", error);
-                        alert(`Не удалось определить местоположение. Ошибка: ${error.message}`);
-                    },
-                    {
-                        enableHighAccuracy: true,
-                        timeout: 5000,
-                        maximumAge: 0
-                    }
-                );
-            } else {
-                alert("Геолокация не поддерживается вашим браузером.");
-            }
+                            // Центрируем карту на текущем местоположении пользователя
+                            map.setCenter(userLocation, 15); // Увеличиваем зум для подробности
+
+                            // Добавляем маркер в точке местоположения
+                            const userPlacemark = new ymaps.Placemark(userLocation, {
+                                balloonContent: 'Вы здесь'
+                            }, {
+                                preset: 'islands#blueCircleDotIcon'
+                            });
+                            map.geoObjects.add(userPlacemark);
+                        },
+                        function(error) {
+                            console.error("Ошибка определения местоположения:", error);
+                            alert("Не удалось определить местоположение.");
+                        },
+                        {
+                            enableHighAccuracy: true,
+                            timeout: 5000,
+                            maximumAge: 0
+                        }
+                    );
+                } else {
+                    alert("Геолокация не поддерживается вашим браузером.");
+                }
+            };
         }
     </script>
+
 </body>
 </html>
