--- a/maps.html
+++ b/maps.html
@@ -5,14 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Карта с определением местоположения</title>
     <style>
+        /* Основные стили для карты */
         #map {
             width: 100%;
-            height: 100vh;
+            height: calc(100vh - 60px); /* Учитываем высоту кнопок */
+        }
+
+        /* Стили для кнопок навигации */
+        .nav-bar {
+            display: flex;
+            justify-content: space-around;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: #fff;
+            padding: 10px 0;
+            border-top: 1px solid #ddd;
+        }
+
+        .nav-button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #4CAF50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            text-decoration: none;
+            font-size: 16px;
+        }
+
+        .nav-button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
     <div id="map"></div>
+
+    <!-- Навигационные кнопки -->
+    <div class="nav-bar">
+        <a href="index.html" class="nav-button">🏠</a>
+        <a href="maps.html" class="nav-button">📍</a>
+        <a href="search.html" class="nav-button">🔍</a>
+        <a href="profile.html" class="nav-button">👤</a>
+    </div>
 
     <!-- Подключение Яндекс Карт API с вашим ключом -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4cd569f0-83ba-4117-8f80-6ed73aaa6260&lang=ru_RU"></script>
