--- a/maps.html
+++ b/maps.html
@@ -15,29 +15,37 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
             background-color: #fff;
-            padding: 10px 0;
-            border-top: 1px solid #ddd;
+            padding: 15px 0;
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            position: absolute;
+            bottom: 0;
         }
 
-        .nav-button {
+        .nav-bar a {
             width: 50px;
             height: 50px;
-            border-radius: 50%;
-            background-color: #4CAF50;
             display: flex;
-            justify-content: center;
             align-items: center;
-            color: #fff;
+            justify-content: center;
+            border-radius: 50%;
+            background-color: #0088cc;
+            color: white;
+            font-size: 12px;
+            text-align: center;
             text-decoration: none;
-            font-size: 16px;
+            transition: background-color 0.3s ease;
         }
 
-        .nav-button:hover {
-            background-color: #45a049;
+        .nav-bar a.active {
+            background-color: #ffdd57;
+            color: #333;
+            font-weight: bold;
+        }
+
+        .nav-bar a:hover {
+            background-color: #005f99;
         }
     </style>
 </head>
@@ -52,7 +60,6 @@
         <a href="profile.html">Profile</a>
     </div>
 
-   
     <script src="https://api-maps.yandex.ru/2.1/?apikey=4cd569f0-83ba-4117-8f80-6ed73aaa6260&lang=ru_RU"></script>
     <script>
         ymaps.ready(init);
