--- a/maps.html
+++ b/maps.html
@@ -55,8 +55,8 @@
     <!-- Навигационные кнопки -->
     <div class="nav-bar">
         <a href="index.html">Главная</a>
-        <a href="maps.html">Maps</a>
-        <a href="search.html" class="active">Поиск</a>
+        <a href="maps.html" class="active">Maps</a>
+        <a href="search.html">Поиск</a>
         <a href="profile.html">Profile</a>
     </div>
 
