--- a/index.html
+++ b/index.html
@@ -5,83 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
     <style>
-        /* Общий стиль */
         body {
-            font-family: 'Roboto', Arial, sans-serif; /* Современный шрифт */
-            font-weight: bold;
+            font-family: "Comic Sans MS", "Comic Sans", cursive;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            justify-content: center; /* Центрирование по вертикали */
+            align-items: center; /* Центрирование по горизонтали */
             height: 100vh;
-            background: linear-gradient(135deg, #000428, #004e92); /* Черно-синий градиент */
-            color: #fff; /* Белый текст */
+            background: linear-gradient(to bottom, #000428, #004e92);
+            color: white;
         }
 
-        /* Стиль текста */
-        p {
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
+        .content {
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            width: 300px; /* Установите ширину контейнера */
-            margin-bottom: 20px; /* Отступ между строками */
-        }
-
-        .icon-button {
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-
-        .icon-button img {
-            width: 16px;
-            height: 16px;
-            filter: invert(1); /* Делает изображение белым */
-        }
-
-        .dropdown {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.9); /* Прозрачный белый фон */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 10px;
-            margin-top: 5px;
-            border-radius: 5px;
-            z-index: 1;
-        }
-
-        .dropdown button {
-            margin: 5px 0;
-            padding: 10px;
-            background-color: #004e92; /* Синий фон */
+            justify-content: center;
+            flex-grow: 1;
+            font-size: 24px;
             color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-            border-radius: 5px;
         }
 
-        .dropdown button:hover {
-            background-color: #0066cc;
-        }
-
-        /* Навигационная панель */
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background: rgba(0, 0, 0, 0.7); /* Полупрозрачный черный */
+            background-color: rgba(255, 255, 255, 0.1);
             padding: 15px 0;
-            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
             width: 100%;
             position: absolute;
             bottom: 0;
@@ -94,12 +45,12 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            background-color: #004e92;
+            background-color: #0088cc;
             color: white;
             font-size: 12px;
             text-align: center;
             text-decoration: none;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.2s ease;
         }
 
         .nav-bar a.active {
@@ -109,8 +60,52 @@
         }
 
         .nav-bar a:hover {
-            background-color: #0066cc;
+            background-color: #005f99;
+            transform: scale(1.1);
         }
+
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 200px;
+            margin: 10px 0;
+            color: white;
+        }
+
+        .icon-button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .dropdown {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            margin-top: 5px;
+            border-radius: 5px;
+            z-index: 1;
+        }
+
+        .dropdown button {
+            margin: 5px 0;
+            padding: 10px;
+            background-color: #0088cc;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background-color 0.3s ease;
+        }
+
+        .dropdown button:hover {
+            background-color: #005f99;
+        }
+
     </style>
 </head>
 <body>
@@ -118,9 +113,9 @@
     <div class="container">
         <p>Моя геопозиция:</p>
         <button class="icon-button" onclick="toggleDropdown('dropdown1')">
-            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка">
+            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка" width="12" height="12">
         </button>
-        <div id="dropdown1" class="dropdown">
+        <div id="dropdown1" class="dropdown" style="transform: translate(200px, 10px);">
             <button>Ввести вручную</button>
             <button>Выбрать на карте</button>
         </div>
@@ -129,9 +124,9 @@
     <div class="container">
         <p>Приём пищи:</p>
         <button class="icon-button" onclick="toggleDropdown('dropdown2')">
-            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка">
+            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка" width="12" height="12">
         </button>
-        <div id="dropdown2" class="dropdown">
+        <div id="dropdown2" class="dropdown" style="transform: translate(200px, 10px);">
             <button>Завтрак</button>
             <button>Обед</button>
             <button>Ужин</button>
@@ -142,15 +137,15 @@
     <div class="container">
         <p>Мой бюджет:</p>
         <button class="icon-button" onclick="toggleDropdown('dropdown3')">
-            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка">
+            <img src="https://pngimg.com/uploads/triangle/triangle_PNG91.png" alt="Иконка" width="12" height="12">
         </button>
-        <div id="dropdown3" class="dropdown">
+        <div id="dropdown3" class="dropdown" style="transform: translate(200px, 10px);">
             <button>Введите сумму...</button>
         </div>
     </div>
 
     <div class="nav-bar">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" class="active">Home Page</a>
         <a href="maps.html">Maps</a>
         <a href="search.html">Search</a>
         <a href="profile.html">Profile</a>
