--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <title>Profile</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Comic Sans MS", sans-serif; /* Шрифт Comic Sans MS */
             margin: 0;
             padding: 0;
             display: flex;
@@ -60,18 +60,14 @@
     </style>
 </head>
 <body>
-
     <div class="content">
         Страница Profile
     </div>
-
     <div class="nav-bar">
         <a href="index.html">Главная</a>
         <a href="maps.html">Maps</a>
         <a href="search.html">Поиск</a>
         <a href="profile.html" class="active">Profile</a>
     </div>
-
 </body>
 </html>
-
