--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,8 @@
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            background-color: #f5f5f5;
+            background: linear-gradient(90deg, #ff7e5f, #feb47b); /* Градиентный фон */
+            color: #333;
         }
 
         .content {
@@ -22,7 +23,7 @@
             justify-content: center;
             flex-grow: 1;
             font-size: 24px;
-            color: #333;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); /* Лёгкая тень для текста */
         }
 
         .nav-bar {
