--- a/profile.html
+++ b/profile.html
@@ -13,8 +13,8 @@
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            background: linear-gradient(90deg, #ff7e5f, #feb47b); /* Градиентный фон */
-            color: #333;
+            background: linear-gradient(to bottom, #000428, #004e92);
+            color: white;
         }
 
         .content {
