--- a/search.html
+++ b/search.html
@@ -13,7 +13,8 @@
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            background-color: #f5f5f5;
+            background: linear-gradient(to bottom, #000428, #004e92);
+            color: white;
         }
 
         .content {
