--- a/search.html
+++ b/search.html
@@ -82,7 +82,7 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.1);
             padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
@@ -94,7 +94,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            background-color: #0088cc;
+            background-color: rgba(255, 255, 255, 0.1);
             color: white;
             font-size: 12px;
             text-align: center;
@@ -103,7 +103,7 @@
         }
 
         .nav-bar a.active {
-            background-color: #ffdd57;
+            background-color: rgba(255, 255, 255, 0.1);
             color: #333;
             font-weight: bold;
         }
