--- a/profile.html
+++ b/profile.html
@@ -57,6 +57,10 @@
 
         .nav-bar a:hover {
             background-color: #005f99;
+            transform: scale(1.1);
+            
+}
+
         }
     </style>
 </head>
