--- a/search.html
+++ b/search.html
@@ -110,6 +110,7 @@
 
         .nav-bar a:hover {
             background-color: #005f99;
+            transform: scale(1.1);
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
