--- a/maps.html
+++ b/maps.html
@@ -46,6 +46,7 @@
 
         .nav-bar a:hover {
             background-color: #005f99;
+            transform: scale(1.1);
         }
     </style>
 </head>
