--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
     <title>Поиск</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Comic Sans MS", "Comic Sans", cursive;
             margin: 0;
             padding: 0;
             display: flex;
