--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
     <title>Profile</title>
     <style>
         body {
-            font-family: "Comic Sans MS", sans-serif; /* Шрифт Comic Sans MS */
+            font-family: "Comic Sans MS", "Comic Sans", cursive;
             margin: 0;
             padding: 0;
             display: flex;
