--- a/maps.html
+++ b/maps.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Карта с определением местоположения</title>
     <style>
+        body {
+        font-family: "Comic Sans MS", "Comic Sans", cursive;
+        margin: 0;
+        padding: 0;
+    }
         /* Основные стили для карты */
         #map {
             width: 100%;
