--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            background: linear-gradient(to bottom, #000428, #004e92);
+            background: linear-gradient(to bottom, #000428, #004e92); /* Градиент для фона */
             color: white;
         }
 
@@ -29,7 +29,7 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: #fff;
+            background-color: #0088cc; /* Голубой цвет */
             padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
@@ -41,7 +41,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            background-color: #0088cc;
+            background-color: #005f99; /* Более тёмный голубой для кнопок */
             color: white;
             font-size: 12px;
             text-align: center;
@@ -50,17 +50,14 @@
         }
 
         .nav-bar a.active {
-            background-color: #ffdd57;
+            background-color: #ffdd57; /* Жёлтый цвет активной кнопки */
             color: #333;
             font-weight: bold;
         }
 
         .nav-bar a:hover {
-            background-color: #005f99;
+            background-color: #003f66; /* Ещё более тёмный голубой при наведении */
             transform: scale(1.1);
-            
-}
-
         }
     </style>
 </head>
