--- a/search.html
+++ b/search.html
@@ -82,7 +82,7 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background: linear-gradient(to right, #000428, #004e92);
+            background-color: #0088cc; /* Голубой */
             padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
         }
