--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: #0088cc; /* Голубой */
             padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
             width: 100%;
