--- a/maps.html
+++ b/maps.html
@@ -20,7 +20,7 @@
         .nav-bar {
             display: flex;
             justify-content: space-around;
-            background-color: #0088cc; /* Голубой */
+            background-color: #0088cc; /* Голубой цвет */
             padding: 15px 0;
             box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.2);
             width: 100%;
