--- a/search.html
+++ b/search.html
@@ -94,7 +94,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: #005f99;
             color: white;
             font-size: 12px;
             text-align: center;
