--- a/maps.html
+++ b/maps.html
@@ -35,7 +35,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            background-color: #0088cc;
+            background-color: #005f99;
             color: white;
             font-size: 12px;
             text-align: center;
