--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
         }
 
         .nav-bar a.active {
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: #ffdd57;
             color: #333;
             font-weight: bold;
         }
